<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ExcellentShop-spigot</artifactId>
        <groupId>su.nightexpress.excellentshop</groupId>
        <version>4.9.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>Core</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>

        <repository>
            <id>everything</id>
            <url>https://repo.citizensnpcs.co/</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>rosewood-repo</id>
            <url>https://repo.rosewooddev.io/repository/public/</url>
        </repository>

        <repository>
            <id>BenCodez Repo</id>
            <url>https://nexus.bencodez.com/repository/maven-public/</url>
        </repository>

        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <repository>
            <id>techscode</id>
            <url>https://repo.techscode.com/repository/maven-releases/</url>
        </repository>

        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>

    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.github.TechFortress</groupId>
            <artifactId>GriefPrevention</artifactId>
            <version>16.17.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.angeschossen</groupId>
            <artifactId>LandsAPI</artifactId>
            <version>6.20.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.alex9849.arm</groupId>
            <artifactId>AdvancedRegionMarket</artifactId>
            <version>3.5.3</version>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.10</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.th0rgal.oraxen</groupId>
            <artifactId>Oraxen</artifactId>
            <version>1.155.1</version>
        </dependency>
        <dependency>
            <groupId>org.black_ixx</groupId>
            <artifactId>playerpoints</artifactId>
            <version>3.2.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>kingdoms</artifactId>
            <version>1.16.8.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>2.0.29-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.mraxetv.beasttokens</groupId>
            <artifactId>BeastTokens</artifactId>
            <version>3.11.1</version>
        </dependency>
        <dependency>
            <groupId>com.bencodez</groupId>
            <artifactId>votingplugin</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Ghost-chu</groupId>
            <artifactId>GemsEconomy</artifactId>
            <version>74073694a3</version>
        </dependency>
        <dependency>
            <groupId>com.github.LoneDev6</groupId>
            <artifactId>api-itemsadder</artifactId>
            <version>3.6.2-beta-r3-b</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.magmaguy.elitemobs</groupId>
            <artifactId>EliteMobs</artifactId>
            <version>8.5.4</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.coinsengine</groupId>
            <artifactId>CoinsEngine</artifactId>
            <version>2.2.0</version>
        </dependency>
        <dependency>
            <groupId>me.TechsCode</groupId>
            <artifactId>UltraEconomyAPI</artifactId>
            <version>2.6.4</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory> <!-- (your resources folder location) -->
                <filtering>true</filtering> <!-- this is the important part, it's what replaces, filters, all placeholders in the resources folder (such as ${project.version} in plugin.yml) -->
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.parent.basedir}\target\ExcellentShop-${project.version}.jar</outputFile>
                            <artifactSet>
                                <includes>
                                    <include>su.nightexpress.excellentshop:*</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>